# bash_cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Review.md  run_build.sh
.github/workflows/: test-ubuntu.yml  test.yml  test_all.yml
Design/: README.md
commands/: assignment.hpp  cat.hpp  cd.hpp  command_utils.hpp  commands_utils.h  commands_utils.hpp  echo.hpp  grep.hpp  ls.hpp  pwd.hpp  wc.hpp
include/: analyzer.hpp  application.hpp  basecmd.hpp  cmd.hpp  common.hpp  extcmd.hpp  file_utils.hpp  getline_win.hpp  handler.hpp  ioservice.hpp  preprocess.hpp
src/: application.cpp  handler.cpp  main.cpp
src/test/: test_preprocess.cpp
src/tests/: CMakeLists.txt  test_commands.cpp
tests/: CMakeLists.txt  test_analyzer  test_analyzer.cpp  test_commands.cpp  test_preprocess.cpp
tests/data/: test_wc_1.txt  test_wc_2.txt
tests/src/: test_analyzer.cpp  test_commands.cpp  test_grep.cpp  test_runner.cpp  test_utils.hpp
